--- a/orders/Gemfile
+++ b/orders/Gemfile
@@ -1,4 +1,8 @@
-source "https://rubygems.org"
+# frozen_string_literal: true
 
-gem "sinatra"
-gem "sinatra-contrib"
+source 'https://rubygems.org'
+
+gem 'opentelemetry-api'
+gem 'opentelemetry-sdk'
+gem 'sinatra'
+gem 'sinatra-contrib'
