--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,13 @@
 version: "2"
 services:
 
+  gateway:
+    build: ./gateway
+    ports:
+      - "4000:4000"
+
+
+
   # Jaeger
   jaeger-all-in-one:
     image: jaegertracing/all-in-one:latest
